package app.entities;

public class CupcakeBottom {
    private int id;
    private String name;
    private int price;

    public CupcakeBottom(int id, String name, int price) {
        this.id = id;
        this.name = name;
        this.price = price;
    }
}
