package app.entities;

public class CupcakeTop {
    private int id;
    private String name;
    private int price;

    public CupcakeTop(int id, String name, int price) {
        this.id = id;
        this.name = name;
        this.price = price;
    }
}
