-- we don't know how to generate root <with-no-name> (class Root) :(

comment on database postgres is 'default administrative connection database';

-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.bottoms
(
    bottom_id serial,
    name character varying(50) COLLATE pg_catalog."default",
    price numeric(5, 2)
    );

CREATE TABLE IF NOT EXISTS public.orderlines
(
    orderline_id serial,
    order_id integer,
    top_id integer,
    bottom_id integer,
    quantity integer,
    price numeric(5, 2)
    );

CREATE TABLE IF NOT EXISTS public.orders
(
    order_id serial,
    user_id integer,
    order_date timestamp without time zone
);

CREATE TABLE IF NOT EXISTS public.tops
(
    top_id serial,
    name character varying(50) COLLATE pg_catalog."default",
    price numeric(5, 2)
    );

CREATE TABLE IF NOT EXISTS public.users
(
    user_id serial,
    firstname character varying(100) COLLATE pg_catalog."default",
    lastname character varying(100) COLLATE pg_catalog."default",
    email character varying(100) COLLATE pg_catalog."default",
    password character varying(100) COLLATE pg_catalog."default",
    is_admin boolean
    );
END;